fix invalid image location

--- a/index.html
+++ b/index.html
@@ -43,14 +43,9 @@
         <source
           media="(min-width:650px)"
           class="desktop-image"
-          srcset="
-            /product-preview-card-component-main/images/image-product-desktop.jpg
-          "
+          srcset="/images/image-product-desktop.jpg"
         />
-        <img
-          class="main-image"
-          src="/product-preview-card-component-main/images/image-product-mobile.jpg"
-        />
+        <img class="main-image" src="/images/image-product-mobile.jpg" />
       </picture>
 
       <div class="description">
