--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </style>
   </head>
   <body>
-    <div class="main-content">
+    <main class="main-content">
       <picture>
         <source
           media="(min-width:650px)"
@@ -49,6 +49,7 @@
         />
         <img
           class="main-image"
+          alt="perfume-sample"
           src="/product-preview-card-component-main/images/image-product-mobile.jpg"
         />
       </picture>
@@ -73,7 +74,7 @@
           </svg>
           Add to Cart
         </button>
-      </div>
+      </main>
     </div>
 
     <div class="attribution">
