--- a/index.html
+++ b/index.html
@@ -43,21 +43,19 @@
         <source
           media="(min-width:650px)"
           class="desktop-image"
-          srcset="
-            /product-preview-card-component-main/images/image-product-desktop.jpg
-          "
+          srcset="./images/image-product-desktop.jpg"
         />
         <img
           class="main-image"
           alt="perfume-sample"
-          src="/product-preview-card-component-main/images/image-product-mobile.jpg"
+          src="./images/image-product-mobile.jpg"
         />
       </picture>
 
-      <div class="description">
-        <p class="">P E R F U M E</p>
-        <h1>Gabrielle Essence Eau De Parfum</h1>
-        <p>
+      <div class="card">
+        <p class="category">PERFUME</p>
+        <h1 class="title">Gabrielle Essence Eau De Parfum</h1>
+        <p class="description">
           A floral, solar and voluptuous interpretation composed by Olivier
           Polge, Perfumer-Creator for the House of CHANEL.
         </p>
@@ -74,14 +72,14 @@
           </svg>
           Add to Cart
         </button>
-      </main>
-    </div>
+      </div>
+    </main>
 
     <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Lahahae</a>.
+      >. Coded by <a href="#">Ks</a>.
     </footer>
   </body>
 </html>
